# new-product-forecasting

./: 01-load-data-to-bricks.py  02-create-blend-ratios.py  03-generate-ts-signature.py  CLAUDE.md  README.md  match_product_actuals  pyproject.toml  test_normalization.py
npf-data/: 4-4-5_Period_Forecasts__First_6_periods____All_Items__preview_.csv  Monthly_Forecasts__First_6_months____All_Items__preview_.csv  Synthetic_Apparel___Footwear_Products__50_.csv  actuals_445_periods_6p_hist.csv  actuals_monthly_6m_hist.csv  actuals_weekly_26w_hist.csv  new_apparel_footwear_products_5.csv  scale_modeling_from_monthlies.csv
utils/: funcs.py
